[tool.poetry]
name = "in-feasibility-of-ml-backdoor-detection"
version = "0.1.0"
description = "Jupyter notebooks used in our paper \"On the (In)feasibility of ML Backdoor Detection as an Hypothesis Testing Problem\""
authors = ["Georg Pichler <georg.pichler@ieee.org>", "Marco Romanelli <marcoromane@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.1"
scipy = "^1.12.0"
numpy = "^1.26.4"
pandas = "^2.2.0"
ucimlrepo = "^0.0.3"
tqdm = "^4.66.2"
mpmath = "^1.3.0"
pyarrow = "^15.0.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
